PulsarAssembler/PulsarAsmGrammarParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from PulsarAsmGrammar.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class PulsarAsmGrammarParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		WHITESPACE=1, NEWLINE=2, COMMENTARY=3, MNEMONIC=4, PLUS=5, SIGN=6, COMMA=7, 
		DECIMAL_INTEGER=8, SIGNED_DECIMAL_INTEGER=9, BIN_INTEGER=10, HEX_INTEGER=11, 
		BITNESS=12, ADDRESSES=13, ENDIANNESS_LITTLE=14, ENDIANNESS_BIG=15, DATA_TYPE_SPECIFIER=16, 
		ADDRESS_TYPE_SPECIFIER=17, UNALIGNED=18, GP_REGISTER=19, SYSTEM_REGISTER=20, 
		INFO_REGISTER=21, CONDITION=22, PROC=23, PROC_START=24, PROC_END=25, SQ_L=26, 
		SQ_R=27, TILD=28, COLON=29, OFFSET=30, LOCAL=31, SETBOOL=32, TEXT_STRING=33, 
		IDENTIFIER=34;
	public const int
		RULE_bitness_directive = 0, RULE_address_directive = 1, RULE_directive = 2, 
		RULE_proc_header = 3, RULE_instruction_specifier = 4, RULE_unsigned_integer = 5, 
		RULE_integer = 6, RULE_data_definition = 7, RULE_data_definition_sequence_inner = 8, 
		RULE_data_definition_sequence = 9, RULE_data_identifier = 10, RULE_data_definition_statement = 11, 
		RULE_op_immediate = 12, RULE_op_register = 13, RULE_op_imm_memory = 14, 
		RULE_op_indirect = 15, RULE_op_local = 16, RULE_op_base_w_offset = 17, 
		RULE_op_base_w_register = 18, RULE_op_relative = 19, RULE_op_data = 20, 
		RULE_jmp_operand = 21, RULE_st_operand = 22, RULE_operands = 23, RULE_label = 24, 
		RULE_instr_specifier_sequence = 25, RULE_instr_body = 26, RULE_jump_sequence = 27, 
		RULE_conditional_body_shared = 28, RULE_conditional_instruction = 29, 
		RULE_conditional_cp_instruction = 30, RULE_instruction = 31, RULE_proc_element = 32, 
		RULE_proc_element_sequence = 33, RULE_procedure = 34, RULE_asm_file_element = 35, 
		RULE_asm_file_element_sequence = 36, RULE_asm_file = 37;
	public static readonly string[] ruleNames = {
		"bitness_directive", "address_directive", "directive", "proc_header", 
		"instruction_specifier", "unsigned_integer", "integer", "data_definition", 
		"data_definition_sequence_inner", "data_definition_sequence", "data_identifier", 
		"data_definition_statement", "op_immediate", "op_register", "op_imm_memory", 
		"op_indirect", "op_local", "op_base_w_offset", "op_base_w_register", "op_relative", 
		"op_data", "jmp_operand", "st_operand", "operands", "label", "instr_specifier_sequence", 
		"instr_body", "jump_sequence", "conditional_body_shared", "conditional_instruction", 
		"conditional_cp_instruction", "instruction", "proc_element", "proc_element_sequence", 
		"procedure", "asm_file_element", "asm_file_element_sequence", "asm_file"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, "'+'", null, "','", null, null, null, null, 
		"'.BITNESS'", "'.ADDRESSES'", "'.LITTLEENDIAN'", "'.BIGENDIAN'", null, 
		null, "'.UNALIGNED'", null, null, null, null, "'.PROC'", "'{'", "'}'", 
		"'['", "']'", "'~'", "':'", "'OFFSET'", "'LOCAL'", "'SETBOOL'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "WHITESPACE", "NEWLINE", "COMMENTARY", "MNEMONIC", "PLUS", "SIGN", 
		"COMMA", "DECIMAL_INTEGER", "SIGNED_DECIMAL_INTEGER", "BIN_INTEGER", "HEX_INTEGER", 
		"BITNESS", "ADDRESSES", "ENDIANNESS_LITTLE", "ENDIANNESS_BIG", "DATA_TYPE_SPECIFIER", 
		"ADDRESS_TYPE_SPECIFIER", "UNALIGNED", "GP_REGISTER", "SYSTEM_REGISTER", 
		"INFO_REGISTER", "CONDITION", "PROC", "PROC_START", "PROC_END", "SQ_L", 
		"SQ_R", "TILD", "COLON", "OFFSET", "LOCAL", "SETBOOL", "TEXT_STRING", 
		"IDENTIFIER"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "PulsarAsmGrammar.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static PulsarAsmGrammarParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public PulsarAsmGrammarParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public PulsarAsmGrammarParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class Bitness_directiveContext : ParserRuleContext {
		public ITerminalNode BITNESS() { return GetToken(PulsarAsmGrammarParser.BITNESS, 0); }
		public ITerminalNode DECIMAL_INTEGER() { return GetToken(PulsarAsmGrammarParser.DECIMAL_INTEGER, 0); }
		public Bitness_directiveContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_bitness_directive; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPulsarAsmGrammarListener typedListener = listener as IPulsarAsmGrammarListener;
			if (typedListener != null) typedListener.EnterBitness_directive(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPulsarAsmGrammarListener typedListener = listener as IPulsarAsmGrammarListener;
			if (typedListener != null) typedListener.ExitBitness_directive(this);
		}
	}

	[RuleVersion(0)]
	public Bitness_directiveContext bitness_directive() {
		Bitness_directiveContext _localctx = new Bitness_directiveContext(Context, State);
		EnterRule(_localctx, 0, RULE_bitness_directive);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 76; Match(BITNESS);
			State = 77; Match(DECIMAL_INTEGER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Address_directiveContext : ParserRuleContext {
		public ITerminalNode ADDRESSES() { return GetToken(PulsarAsmGrammarParser.ADDRESSES, 0); }
		public ITerminalNode DECIMAL_INTEGER() { return GetToken(PulsarAsmGrammarParser.DECIMAL_INTEGER, 0); }
		public Address_directiveContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_address_directive; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPulsarAsmGrammarListener typedListener = listener as IPulsarAsmGrammarListener;
			if (typedListener != null) typedListener.EnterAddress_directive(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPulsarAsmGrammarListener typedListener = listener as IPulsarAsmGrammarListener;
			if (typedListener != null) typedListener.ExitAddress_directive(this);
		}
	}

	[RuleVersion(0)]
	public Address_directiveContext address_directive() {
		Address_directiveContext _localctx = new Address_directiveContext(Context, State);
		EnterRule(_localctx, 2, RULE_address_directive);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 79; Match(ADDRESSES);
			State = 80; Match(DECIMAL_INTEGER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DirectiveContext : ParserRuleContext {
		public Bitness_directiveContext bitness_directive() {
			return GetRuleContext<Bitness_directiveContext>(0);
		}
		public Address_directiveContext address_directive() {
			return GetRuleContext<Address_directiveContext>(0);
		}
		public ITerminalNode ENDIANNESS_LITTLE() { return GetToken(PulsarAsmGrammarParser.ENDIANNESS_LITTLE, 0); }
		public ITerminalNode ENDIANNESS_BIG() { return GetToken(PulsarAsmGrammarParser.ENDIANNESS_BIG, 0); }
		public DirectiveContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_directive; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPulsarAsmGrammarListener typedListener = listener as IPulsarAsmGrammarListener;
			if (typedListener != null) typedListener.EnterDirective(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPulsarAsmGrammarListener typedListener = listener as IPulsarAsmGrammarListener;
			if (typedListener != null) typedListener.ExitDirective(this);
		}
	}

	[RuleVersion(0)]
	public DirectiveContext directive() {
		DirectiveContext _localctx = new DirectiveContext(Context, State);
		EnterRule(_localctx, 4, RULE_directive);
		try {
			State = 86;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case BITNESS:
				EnterOuterAlt(_localctx, 1);
				{
				State = 82; bitness_directive();
				}
				break;
			case ADDRESSES:
				EnterOuterAlt(_localctx, 2);
				{
				State = 83; address_directive();
				}
				break;
			case ENDIANNESS_LITTLE:
				EnterOuterAlt(_localctx, 3);
				{
				State = 84; Match(ENDIANNESS_LITTLE);
				}
				break;
			case ENDIANNESS_BIG:
				EnterOuterAlt(_localctx, 4);
				{
				State = 85; Match(ENDIANNESS_BIG);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Proc_headerContext : ParserRuleContext {
		public ITerminalNode PROC() { return GetToken(PulsarAsmGrammarParser.PROC, 0); }
		public ITerminalNode IDENTIFIER() { return GetToken(PulsarAsmGrammarParser.IDENTIFIER, 0); }
		public Proc_headerContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_proc_header; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPulsarAsmGrammarListener typedListener = listener as IPulsarAsmGrammarListener;
			if (typedListener != null) typedListener.EnterProc_header(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPulsarAsmGrammarListener typedListener = listener as IPulsarAsmGrammarListener;
			if (typedListener != null) typedListener.ExitProc_header(this);
		}
	}

	[RuleVersion(0)]
	public Proc_headerContext proc_header() {
		Proc_headerContext _localctx = new Proc_headerContext(Context, State);
		EnterRule(_localctx, 6, RULE_proc_header);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 88; Match(PROC);
			State = 89; Match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Instruction_specifierContext : ParserRuleContext {
		public ITerminalNode DATA_TYPE_SPECIFIER() { return GetToken(PulsarAsmGrammarParser.DATA_TYPE_SPECIFIER, 0); }
		public ITerminalNode ADDRESS_TYPE_SPECIFIER() { return GetToken(PulsarAsmGrammarParser.ADDRESS_TYPE_SPECIFIER, 0); }
		public ITerminalNode UNALIGNED() { return GetToken(PulsarAsmGrammarParser.UNALIGNED, 0); }
		public Instruction_specifierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_instruction_specifier; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPulsarAsmGrammarListener typedListener = listener as IPulsarAsmGrammarListener;
			if (typedListener != null) typedListener.EnterInstruction_specifier(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPulsarAsmGrammarListener typedListener = listener as IPulsarAsmGrammarListener;
			if (typedListener != null) typedListener.ExitInstruction_specifier(this);
		}
	}

	[RuleVersion(0)]
	public Instruction_specifierContext instruction_specifier() {
		Instruction_specifierContext _localctx = new Instruction_specifierContext(Context, State);
		EnterRule(_localctx, 8, RULE_instruction_specifier);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 91;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DATA_TYPE_SPECIFIER) | (1L << ADDRESS_TYPE_SPECIFIER) | (1L << UNALIGNED))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Unsigned_integerContext : ParserRuleContext {
		public ITerminalNode BIN_INTEGER() { return GetToken(PulsarAsmGrammarParser.BIN_INTEGER, 0); }
		public ITerminalNode DECIMAL_INTEGER() { return GetToken(PulsarAsmGrammarParser.DECIMAL_INTEGER, 0); }
		public ITerminalNode HEX_INTEGER() { return GetToken(PulsarAsmGrammarParser.HEX_INTEGER, 0); }
		public Unsigned_integerContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_unsigned_integer; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPulsarAsmGrammarListener typedListener = listener as IPulsarAsmGrammarListener;
			if (typedListener != null) typedListener.EnterUnsigned_integer(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPulsarAsmGrammarListener typedListener = listener as IPulsarAsmGrammarListener;
			if (typedListener != null) typedListener.ExitUnsigned_integer(this);
		}
	}

	[RuleVersion(0)]
	public Unsigned_integerContext unsigned_integer() {
		Unsigned_integerContext _localctx = new Unsigned_integerContext(Context, State);
		EnterRule(_localctx, 10, RULE_unsigned_integer);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 93;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DECIMAL_INTEGER) | (1L << BIN_INTEGER) | (1L << HEX_INTEGER))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IntegerContext : ParserRuleContext {
		public Unsigned_integerContext unsigned_integer() {
			return GetRuleContext<Unsigned_integerContext>(0);
		}
		public ITerminalNode SIGNED_DECIMAL_INTEGER() { return GetToken(PulsarAsmGrammarParser.SIGNED_DECIMAL_INTEGER, 0); }
		public IntegerContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_integer; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPulsarAsmGrammarListener typedListener = listener as IPulsarAsmGrammarListener;
			if (typedListener != null) typedListener.EnterInteger(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPulsarAsmGrammarListener typedListener = listener as IPulsarAsmGrammarListener;
			if (typedListener != null) typedListener.ExitInteger(this);
		}
	}

	[RuleVersion(0)]
	public IntegerContext integer() {
		IntegerContext _localctx = new IntegerContext(Context, State);
		EnterRule(_localctx, 12, RULE_integer);
		try {
			State = 97;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case DECIMAL_INTEGER:
			case BIN_INTEGER:
			case HEX_INTEGER:
				EnterOuterAlt(_localctx, 1);
				{
				State = 95; unsigned_integer();
				}
				break;
			case SIGNED_DECIMAL_INTEGER:
				EnterOuterAlt(_localctx, 2);
				{
				State = 96; Match(SIGNED_DECIMAL_INTEGER);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Data_definitionContext : ParserRuleContext {
		public IntegerContext integer() {
			return GetRuleContext<IntegerContext>(0);
		}
		public ITerminalNode TEXT_STRING() { return GetToken(PulsarAsmGrammarParser.TEXT_STRING, 0); }
		public Data_definitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_data_definition; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPulsarAsmGrammarListener typedListener = listener as IPulsarAsmGrammarListener;
			if (typedListener != null) typedListener.EnterData_definition(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPulsarAsmGrammarListener typedListener = listener as IPulsarAsmGrammarListener;
			if (typedListener != null) typedListener.ExitData_definition(this);
		}
	}

	[RuleVersion(0)]
	public Data_definitionContext data_definition() {
		Data_definitionContext _localctx = new Data_definitionContext(Context, State);
		EnterRule(_localctx, 14, RULE_data_definition);
		try {
			State = 101;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case DECIMAL_INTEGER:
			case SIGNED_DECIMAL_INTEGER:
			case BIN_INTEGER:
			case HEX_INTEGER:
				EnterOuterAlt(_localctx, 1);
				{
				State = 99; integer();
				}
				break;
			case TEXT_STRING:
				EnterOuterAlt(_localctx, 2);
				{
				State = 100; Match(TEXT_STRING);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Data_definition_sequence_innerContext : ParserRuleContext {
		public Data_definitionContext data_definition() {
			return GetRuleContext<Data_definitionContext>(0);
		}
		public ITerminalNode COMMA() { return GetToken(PulsarAsmGrammarParser.COMMA, 0); }
		public Data_definition_sequence_innerContext data_definition_sequence_inner() {
			return GetRuleContext<Data_definition_sequence_innerContext>(0);
		}
		public Data_definition_sequence_innerContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_data_definition_sequence_inner; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPulsarAsmGrammarListener typedListener = listener as IPulsarAsmGrammarListener;
			if (typedListener != null) typedListener.EnterData_definition_sequence_inner(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPulsarAsmGrammarListener typedListener = listener as IPulsarAsmGrammarListener;
			if (typedListener != null) typedListener.ExitData_definition_sequence_inner(this);
		}
	}

	[RuleVersion(0)]
	public Data_definition_sequence_innerContext data_definition_sequence_inner() {
		Data_definition_sequence_innerContext _localctx = new Data_definition_sequence_innerContext(Context, State);
		EnterRule(_localctx, 16, RULE_data_definition_sequence_inner);
		try {
			State = 110;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 103; data_definition();
				State = 104; Match(COMMA);
				State = 105; data_definition_sequence_inner();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 107; data_definition();
				State = 108; Match(COMMA);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Data_definition_sequenceContext : ParserRuleContext {
		public Data_definition_sequence_innerContext data_definition_sequence_inner() {
			return GetRuleContext<Data_definition_sequence_innerContext>(0);
		}
		public Data_definitionContext data_definition() {
			return GetRuleContext<Data_definitionContext>(0);
		}
		public Data_definition_sequenceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_data_definition_sequence; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPulsarAsmGrammarListener typedListener = listener as IPulsarAsmGrammarListener;
			if (typedListener != null) typedListener.EnterData_definition_sequence(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPulsarAsmGrammarListener typedListener = listener as IPulsarAsmGrammarListener;
			if (typedListener != null) typedListener.ExitData_definition_sequence(this);
		}
	}

	[RuleVersion(0)]
	public Data_definition_sequenceContext data_definition_sequence() {
		Data_definition_sequenceContext _localctx = new Data_definition_sequenceContext(Context, State);
		EnterRule(_localctx, 18, RULE_data_definition_sequence);
		try {
			State = 116;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 112; data_definition_sequence_inner();
				State = 113; data_definition();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 115; data_definition();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
